ingress-kong/kong-dashboard-postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:latest
        ports:
        - containerPort: 1337
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: kong
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 1337
    protocol: TCP
  selector:
    app: konga
